--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["koopa1338 <sinner1991@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-wasm-bindgen = "0.2.69"
+log = "0.4"
+wasm-logger = "0.2"
 yew = "0.17.4"
