--- a/mugen-common/Cargo.toml
+++ b/mugen-common/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0.118", features = ["derive"] }
-diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
+diesel = { version = "1.4.5", features = ["postgres", "extras"] }
 dotenv = "0.15.0"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
