--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -10,11 +10,13 @@ actix-rt = "2.2.0"
 actix-service = "2.0.0"
 actix-web = "3.3.2"
 actix-web-grants = "2.0.1"
+argon2 = "0.2.1"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = "2.33.3"
 diesel = { version = "1.4.6", features = ["postgres", "extras"] }
 dotenv = "0.15.0"
 env_logger = "0.8.3"
+lazy_static = "1.4.0"
 log = "0.4.14"
 r2d2 = "0.8.9"
 r2d2_postgres = "0.18.0"
