--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -11,6 +11,7 @@ actix-service = "2.0.0"
 actix-web = "3.3.2"
 actix-web-grants = "2.0.1"
 argon2 = "0.2.1"
+bcrypt = "0.10"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = "2.33.3"
 diesel = { version = "1.4.6", features = ["postgres", "extras"] }
