--- a/mugen-ui/Cargo.toml
+++ b/mugen-ui/Cargo.toml
@@ -5,10 +5,17 @@ authors = ["koopa1338 <sinner1991@gmail.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "0.2.74"
-web-sys = { version = "0.3.51", features = ["HtmlElement", "HtmlInputElement", "Node"] }
+wasm-bindgen = "0.2.76"
+wee_alloc = { version = "0.4.5", optional = true }
 yew = { version = "0.17.4", features = ["web_sys"] }
 yew-router = { version = "0.14.0", features = ["web_sys"] }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.26"
+
+[profile.release]
+opt-level = "s"
+
