--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -5,12 +5,9 @@ authors = ["koopa1338 <sinner1991@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-actix-cors = "0.5.4"
-actix-files = "0.5.0"
-actix-rt = "2.2.0"
-actix-service = "2.0.0"
-actix-web = "3.3.2"
-actix-web-grants = "2.0.1"
+rocket = "0.4.10"
+rocket_codegen = "0.4.10"
+rocket_contrib = "0.4.10"
 argon2 = "0.2.1"
 bcrypt = "0.10"
 chrono = { version = "0.4.19", features = ["serde"] }
