change: using tokio for main

--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -20,4 +20,4 @@ log = "0.4.14"
 r2d2 = "0.8.9"
 r2d2_postgres = "0.18.0"
 serde = { version = "1.0.126", features = ["derive"] }
-tokio = "1.5.0"
+tokio = { version = "1.11.0", features = ["full"] }
