--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -13,6 +13,7 @@ diesel = { version = "1.4.6", features = ["postgres", "extras"] }
 diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
 log = "0.4.14"
+fern = "0.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
 tokio = { version = "1.11.0", features = ["full"] }
 
