--- a/mugen-ui/Cargo.toml
+++ b/mugen-ui/Cargo.toml
@@ -13,6 +13,9 @@ wee_alloc = { version = "0.4.5", optional = true }
 yew = { version = "0.17.4", features = ["web_sys"] }
 yew-router = { version = "0.14.0", features = ["web_sys"] }
 
+[features]
+default = ["wee_alloc"]
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.26"
 
