--- a/mugen-ui/Cargo.toml
+++ b/mugen-ui/Cargo.toml
@@ -5,11 +5,20 @@ authors = ["koopa1338 <sinner1991@gmail.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-# mugen-common = { path = "../mugen-common" }
-wasm-bindgen = "0.2.69"
-web-sys = { version = "0.3.46", features = ["HtmlElement", "HtmlInputElement", "Node"] }
+wasm-bindgen = "0.2.76"
+wee_alloc = { version = "0.4.5", optional = true }
 yew = { version = "0.17.4", features = ["web_sys"] }
-yew-router = { version = "0.14", features = ["web_sys"] }
+yew-router = { version = "0.14.0", features = ["web_sys"] }
+
+[features]
+default = ["wee_alloc"]
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.26"
+
+[profile.release]
+opt-level = "s"
+
