--- a/mugen-ui/Cargo.toml
+++ b/mugen-ui/Cargo.toml
@@ -2,22 +2,22 @@
 name = "mugen-ui"
 version = "0.1.0"
 authors = ["koopa1338 <sinner1991@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "0.2.76"
+wasm-bindgen = "0.2.79"
 wee_alloc = { version = "0.4.5", optional = true }
-yew = { version = "0.17.4", features = ["web_sys"] }
-yew-router = { version = "0.14.0", features = ["web_sys"] }
+yew = { version = "0.19.3" }
+yew-router = { version = "0.16.0" }
 
 [features]
 default = ["wee_alloc"]
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.26"
+wasm-bindgen-test = "0.3.29"
 
 [profile.release]
 opt-level = "s"
