--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -11,7 +11,7 @@ tokio = { version = "1.15.0", features = ["full"] }
 tokio-util = "0.6.9"
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
-tower = { version = "0.4.11", features = ["full"] }
-tower-http = { version = "0.2.0", features = ["full"] }
+tower = { version = "0.4.11", features = ["timeout"]}
+tower-http = { version = "0.2.0", features = ["fs", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 
