SeaORM with database configuration (#8)
* SeaORM setup with postgres sqlx
* database connection pool, adding this as an ExtensionLayer to the api service
* document model with migrations

--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -14,4 +14,6 @@ tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
 tower = { version = "0.4.11", features = ["timeout"] }
 tower-http = { version = "0.2.1", features = ["fs", "trace"] }
 serde = { version = "1.0.136", features = ["derive"] }
-
+sea-orm = { version = "0.6.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"], default-features = false }
+anyhow = "1.0.53"
+clap = { version = "3.0.14", features = ["derive", "env"] }
