make assets path configurable through .env file

--- a/mugen-server/.env.example
+++ b/mugen-server/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL=sql://user:secret@host/database
 RUST_LOG=mugen-server=debug,tower_http=debug
+# Asset path to the index.html, only if yew-frontend is enabled
+ASSET_PATH=../assets/
