using migrations by sea-orm-cli
the advantage is, that we can use our model entities in the migrations

--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -23,6 +23,8 @@ sea-orm = { version = "0.6.0", features = [
 ], default-features = false }
 anyhow = "1.0.53"
 clap = { version = "3.0.14", features = ["derive", "env"] }
+entity = { path = "entity" }
+migration = { path = "migration" }
 
 [features]
 yew-frontend = []
