--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -25,6 +25,7 @@ anyhow = "1.0.57"
 clap = { version = "3.1.13", features = ["derive", "env"] }
 entity = { path = "entity" }
 migration = { path = "migration" }
+tracing-attributes = "0.1.19"
 
 [features]
 yew-frontend = []
