wip: parsing logging.toml and create filtering

--- a/mugen-server/.env.example
+++ b/mugen-server/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL=sql://user:secret@host/database
-RUST_LOG=mugen_server=debug,tower_http=debug
 # Asset path to the index.html, only if yew-frontend is enabled
 ASSET_PATH=../assets/
+# Path to the logging.toml config file
+LOGGING=./logging.toml
