--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -25,7 +25,11 @@ anyhow = "1.0.57"
 clap = { version = "3.1.13", features = ["derive", "env"] }
 entity = { path = "entity" }
 migration = { path = "migration" }
+tracing = "0.1.30"
+tracing-subscriber = { version = "0.3.8", features = ["env-filter", "json", "fmt", "registry"] }
 tracing-attributes = "0.1.19"
+tracing-appender = "0.2.0"
+toml = "0.5.8"
 
 [features]
 yew-frontend = []
