--- a/mugen-ui/Cargo.toml
+++ b/mugen-ui/Cargo.toml
@@ -10,8 +10,8 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2.79"
 wee_alloc = { version = "0.4.5", optional = true }
-yew = { version = "0.19.3" }
-yew-router = { version = "0.16.0" }
+yew = "0.19.3"
+yew-router = "0.16.0"
 
 [features]
 default = ["wee_alloc"]
