--- a/mugen-server/migration/Cargo.toml
+++ b/mugen-server/migration/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "migration"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 publish = false
 
@@ -9,5 +9,11 @@ name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
-sea-schema = { version = "0.7.1", default-features = false, features = [ "migration", "debug-print" ] }
 entity = { path = "../entity" }
+sea-orm-migration = { version = "0.8.3", features = [ "runtime-tokio-native-tls", "sqlx-postgres" ] }
+sea-orm = { version = "0.8.0", features = [
+    "sqlx-postgres",
+    "runtime-tokio-native-tls",
+    "macros",
+], default-features = false }
+tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
