--- a/mugen-server/entity/Cargo.toml
+++ b/mugen-server/entity/Cargo.toml
@@ -9,14 +9,16 @@ name = "entity"
 path = "src/lib.rs"
 
 [dependencies]
-serde = { version = "1.0.138", features = ["derive"] }
+serde = { version = "1.0.140", features = ["derive"] }
 
 [dependencies.sea-orm]
-version = "0.8.0"
+version = "0.9.0"
 features = [
   "macros",
   "debug-print",
   "runtime-tokio-native-tls",
-  "sqlx-postgres"
+  "sqlx-postgres",
+  "with-chrono",
+  "with-json",
 ]
 default-features = false
