--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -27,6 +27,7 @@ clap = { version = "3.2.13", features = ["derive", "env"] }
 entity = { path = "entity" }
 migration = { path = "migration" }
 toml = "0.5.9"
+tokio_schedule = "0.3.0"
 
 [features]
 yew-frontend = []
