--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
-chrono = "0.4"
+ts-rs = { version = "6.2", features = ["chrono-impl", "format"] }
