--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -20,6 +20,7 @@ tracing-appender = "0.2"
 tower = { version = "0.4", features = ["timeout"] }
 tower-http = { version = "0.3", features = ["fs", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 sea-orm = { version = "0.9", features = [
     "sqlx-postgres",
     "runtime-tokio-native-tls",
