--- a/mugen-ui/Cargo.toml
+++ b/mugen-ui/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 console_error_panic_hook = "0.1"
 wasm-bindgen = "0.2"
 wee_alloc = "0.4"
-yew = "0.19"
-yew-router = "0.16"
+yew = { version = "0.20", features = ["csr"] }
+yew-router = "0.17"
