--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -24,7 +24,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sea-orm = { version = "0.10", features = [
     "sqlx-postgres",
-    "runtime-tokio-native-tls",
+    "runtime-tokio-rustls",
     "macros",
     "with-json",
     "with-chrono",
