--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "mugen-server"
 version = "0.1.0"
-authors = ["koopa1338 <sinner1991@gmail.com>"]
-edition = "2021"
+edition.workspace = true
+authors.workspace = true
 
 [dependencies]
 axum = { version = "0.6", features = ["macros"] }
