--- a/dyn-logger/Cargo.toml
+++ b/dyn-logger/Cargo.toml
@@ -8,6 +8,7 @@ authors.workspace = true
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.7"
+tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "env-filter",
     "json",
