--- a/mugen-server/docker/docker-compose.yml
+++ b/mugen-server/docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   mugendb:
     image: postgres:14-alpine
+    restart: unless-stopped
     ports:
       - "5432:5432"
     environment:
