--- a/mugen-server/Cargo.toml
+++ b/mugen-server/Cargo.toml
@@ -37,6 +37,7 @@ toml = "0.7"
 tokio_schedule = "0.3"
 common = { path = "../common" }
 dyn-logger = { path = "../dyn-logger" }
+async-trait = "0.1.64"
 
 [features]
 yew-frontend = []
