--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,10 +5,10 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
-axum = { version = "0.6", features = ["macros"] }
+axum = { version = "0.6", features = ["macros", "http2"] }
 dotenv = "0.15"
 thiserror = "1.0"
-tokio = { version = "1.25", features = ["full"] }
+tokio = { version = "1.25", default_features = false, features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [
     "env-filter",
@@ -19,7 +19,7 @@ tracing-subscriber = { version = "0.3", features = [
 tracing-attributes = "0.1"
 tracing-appender = "0.2"
 tower = { version = "0.4", features = ["timeout"] }
-tower-http = { version = "0.4", features = ["fs", "trace"] }
+tower-http = { version = "0.4", default_features = false, features = ["fs", "trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sea-orm = { version = "0.11", features = [
