--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -1,11 +1,17 @@
 version: "3.8"
 services:
   mugendb:
-    image: postgres:14-alpine
-    restart: unless-stopped
-    ports:
-      - "5432:5432"
     environment:
       - POSTGRES_USER=mugen
       - POSTGRES_PASSWORD=mugen
       - POSTGRES_DB=mugendb
+    image: postgres:14-alpine
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    volumes:
+      - database:/var/lib/postgresql/data
+
+volumes:
+  database:
+
