moved dyn-logger to own project to publish on crates.io

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -36,5 +36,5 @@ migration = { path = "migration" }
 toml = "0.7"
 tokio_schedule = "0.3"
 common = { path = "../common" }
-dyn-logger = { path = "../dyn-logger" }
+dyn-logger = "0.1"
 async-trait = "0.1.64"
