init frontend with trunk and leptos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "backend",
-    "common",
-]
+members = ["backend", "common", "frontend"]
 
 [workspace.package]
 authors = ["koopa1338 <sinner1991@gmail.com>"]
