--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 console_error_panic_hook = { version = "0.1" }
 console_log = { version = "1" }
 gloo-net = { version = "0.4", features = ["http"] }
+gloo-utils = "0.2"
 leptos = { version = "0.5", features = ["csr", "nightly"] }
 leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5", features = ["csr", "nightly"] }
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
+thiserror = "1"
 wasm-bindgen = { version = "0.2" }
 web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
 
