--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+charming = { version = "0.2", features = ["wasm"] }
 console_error_panic_hook = { version = "0.1" }
 console_log = { version = "1" }
 gloo-net = { version = "0.4", features = ["http"] }
@@ -16,11 +17,11 @@ serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 wasm-bindgen = { version = "0.2" }
 web-sys = { version = "0.3", features = [
-  "AbortController",
-  "AbortSignal",
-  "File",
-  "FileList",
-  "DataTransfer",
+    "AbortController",
+    "AbortSignal",
+    "File",
+    "FileList",
+    "DataTransfer",
 ] }
 
 common = { path = "../common" }
