--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "echarts": "^5.4.3",
+    "echarts-gl": "^2.0.9",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.5"
   }
